# ULGP

./: .gitignore  README.md  demo_a_ref.npy  pyproject.toml  run_anomalyclip_ulgp.sh  run_anomalyclip_ulgp_mvtec.sh  run_anomalyclip_ulgp_mvtec_mid_d0.sh  run_anomalyclip_ulgp_mvtec_mid_d1.sh  run_anomalyclip_ulgp_visa_mid.sh  run_ulgp_mvtec_all.sh  run_ulgp_v2_mvtec_all.sh  run_ulgp_v2_visa_all.sh  run_ulgp_v3_mvtec_all.sh  run_ulgp_v3_visa_all.sh  run_ulgp_visa_all.sh  tmp_a0.npy  tmp_feat.npy  tmp_ref_anomalyclip_integ.npy  tmp_ref_anomalyclip_integ_info.json  tmp_ref_candidate.npy  tmp_ref_info.json  tmp_ref_u.npy  uar_sra_ulgp.py  uar_sra_ulgp_v2.py  uar_sra_ulgp_v3.py
configs/: anomalyclip.yaml  default.yaml  musc.yaml  patchcore.yaml
examples/: demo_feature_lite.py  demo_full.py  demo_map_only.py  integrate_anomalyclip.py  integrate_anomalyclip_direct.py  integrate_musc.py
tests/: test_candidate.py  test_graph.py  test_plugin_modes.py  test_propagator.py  test_uncertainty.py
ulgp/: __init__.py  candidate.py  cli.py  fusion.py  graph.py  plugin.py  preprocess.py  propagator.py  uncertainty.py  utils.py  vis.py
