[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ulgp-plugin"
version = "0.1.0"
description = "ULGP: Uncertainty-guided Local Graph Propagation plugin"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ulgp*"]
